2014/11/24 (version 1.30)
- Changed sorting order of tasks in the tray menu: now showing
  10 recent tasks, not most urgent.

2014/11/23 (version 1.29)
- Added a tray icon for systems that don't have appindicator.
- Fixed menu items not working.

2014/02/06 (version 1.27)
- Better handling of unknown database contents.

2014/02/05 (version 1.26)
- Search now searches within the whole description, not only stripped-out
  versions, which makes it possible to find tasks by URL, when they have
  some meaning (e.g., Jira includes remote project name sometimes).
- Search now also searches uuids.

2014/01/13 (version 1.24)
- Fixed stripping URLs from menu.

2014/01/10 (version 1.23)
- Fixed wrong notes folder.

2014/01/09 (version 1.22)
- Fixed a bug with tasks that have no project.

2013/12/14 (version 1.21)
- Improved the search window to require all entered words to be present
  in either project or description fields of a task.

2013/12/05 (version 1.20)
- Fixed a crash when there's no database.
- Special tag "pin" replaced with "next".
- Can now finish and restart tasks using the search window popup menu.
- Can now open linked pages from the search window popup menu.

2013/11/27 (version 1.17)
- Added a popup menu to start/stop tasks in the search dialog.

2013/11/15 (version 1.16)
- Calling bugwarrior from menu no longer blocks the UI.

2013/11/12 (version 1.15)
- Active tasks are shown with bold font in the search dialog.

2013/11/08 (version 1.14)
- Long notes now have a vertical scroll-bar and don't extend
  the window vertically.

2013/11/07 (version 1.13)
- Use real task urgency, which tasks are now sorted by.

2013/11/06 (version 1.12)
- Fixed a bug with tasks that have no project assigned.
- Strip trailing URLs from task descriptions.
- Moved project name to the end of the menu item, and only show
  it if the task has one.
- Don't open task webpage on start (there's a separate button for that).
- Fixed an error when a task had no priority.